style: added responsiveness

--- a/styles/product.css
+++ b/styles/product.css
@@ -34,3 +34,8 @@
 .card-dismiss > a:hover {
   color: var(--alert-red);
 }
+@media only screen and (max-width: 720px) {
+  .product-aside {
+    display: none;
+  }
+}
