--- a/styles/cart.css
+++ b/styles/cart.css
@@ -27,7 +27,7 @@
   color: var(--brand-secondary);
 }
 .cart-btn {
-  width: 12rem;
+  width: 15rem;
   margin-top: 1rem;
 }
 .cart-btn button {
@@ -48,7 +48,7 @@
   border-bottom: 1px solid var(--solid-black);
 }
 .price-breakdown > * {
-  margin: 5px 0px;
+  margin: 8px 0px;
 }
 .price-details {
   justify-content: space-between;
@@ -56,4 +56,18 @@
 .order-btn {
   margin: 0;
   width: 100%;
+}
+@media only screen and (max-width: 900px) {
+  .cart-products {
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .price-container {
+    width: 18rem;
+  }
+  .cart-btn {
+    width: 10rem;
+  }
 }
