fix:navbar height fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,8 @@
 .nav-container {
   color: var(--text-primary);
   background-color: var(--solid-white);
-  padding: 1rem;
   width: 100%;
+  height: 4rem;
   border-bottom: 2px solid var(--bg-offgrey);
 }
 
