--- a/styles/product.css
+++ b/styles/product.css
@@ -39,3 +39,14 @@
     display: none;
   }
 }
+@media screen and (max-width: 500px) {
+  .product {
+    padding: 0rem;
+  }
+  .product-list {
+    padding: 0rem;
+  }
+  .product-heading {
+    font-size: 1.3rem;
+  }
+}
